jquery based ui

--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>chat</title>
-<script src="/socket.io/socket.io.js"></script>
+<script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js></script>
+<script src=/socket.io/socket.io.js></script>
 <script>
-  (function (socket) {
-     socket.on('hello', function (data) {
-      console.log(data.hello);
+
+  $(function () {
+    var socket = io.connect();
+    
+    var $users = $('#users ul');
+    var $chatOutput = $('#chat div');
+    var $chatInput = $('#chat input');
+    var $messagesOutput = $('#messages div');
+    var $messagesInput = $('#messages input');
+    var target = 0;
+
+    socket.on('hello', function (data) {
+      console.log('hello:', data.hello);
     });
     socket.on('listing', function (data) {
-       users = data; 
+      console.log('listing:', data);
+      window.users = data; 
+      target = 0;
+      $users.empty();
+      $.each(data, function (index, user) {
+        console.log(arguments);
+        $users.append('<li>' + user);
+      });
+      $users.find('li:first').addClass('selected');
     });
     socket.on('chat', function (message) {
        console.log('chat:', message); 
+       $chatOutput.append('<div>' + message);
     });
     socket.on('message', function (message) {
        console.log('message', message); 
+       $messagesOutput.append('<div>' + message);
     });
+    
     function chat (message) {
       socket.emit('chat', message);   
     }
@@ -25,8 +47,51 @@
         message: message
       });
     }
-    window.chat = chat;
-    window.message = message;
-  })(io.connect());
+
+    $('#chat form').submit(function (event) {
+      event.preventDefault();
+      chat($chatInput.val());
+      $chatInput.val('');
+    });
+
+    $('#messages form').submit(function (event) {
+      event.preventDefault();
+      message(users[target], $messagesInput.val());
+      $messagesInput.val('');
+    });
+
+    $users.on('click', 'li', function (event) {
+      var $user = $(this);
+      target = $user.index();
+      $users.find('li').removeClass('selected');
+      $user.addClass('selected');
+
+    });
+  });
    
 </script>
+<style>
+  .selected {
+    color: blue;
+  }
+</style>
+<section id='users'>
+  <h1>Users:</h1>
+  <ul></ul>
+</section>
+<section id='chat'>
+  <h1>Chat:</h1>
+  <div></div>
+  <form>
+    <input>
+    <button>submit</buttom>
+  </form>
+</section>
+<section id='messages'>
+  <h1>Messages:</h1>
+  <div></div>
+  <form>
+    <input>
+    <button>submit</buttom>
+  </form>
+</section>
